--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.11.0",
     "js-cookie": "^3.0.5",
