--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "next": "15.5.0",
+    "nuqs": "^2.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.62.0",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.6",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
